# docassemble-GithubFeedbackForm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black-action.yml  publish.yml  unit-tests.yml
docassemble/GithubFeedbackForm/: __init__.py  alembic.ini  feedback_on_server.py  github_issue.py  requirements.txt  test_feedback_db.py
docassemble/GithubFeedbackForm/alembic/: env.py
docassemble/GithubFeedbackForm/alembic/versions/: 542797f969ea_initial_alembic_migration.py  5b46c3a6f9b7_add_github_user_and_repo.py  8821926028d6_archiving.py
docassemble/GithubFeedbackForm/data/questions/: browse_feedback_sessions.yml  embedded_feedback.yml  embedded_review.yml  feedback.yml
